fix: position and z-index cardEditGoals

--- a/src/Components/GoalsCardPopupEdit/style.css
+++ b/src/Components/GoalsCardPopupEdit/style.css
@@ -9,6 +9,7 @@
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5;
 }
 .container_checkinGoal {
   padding: 10px 20px;
@@ -17,4 +18,5 @@
 .btn-divGoalEdit > button {
   margin-right: 15px;
   padding: 5px 15px;
+  width: auto !important;
 }
